--- a/fansite.css
+++ b/fansite.css
@@ -1,1 +1,16 @@
-/*-----*/
+/*------------Page d'acceuil fansite.html-------------*/
+
+/*------------------Fin--------------------------------*/
+
+/*------------Historique Club fansite2.html-----------*/
+
+/*----------------fin---------------------------------*/
+
+/*----------------tableau palmarès fansite3.html-------------------*/
+
+/*--------------------fin-----------------------------------------*/
+
+/*-----------------Calendrier fansite4.html-----------------------*/
+
+/*--------------------fin----------------------------------------*/
+
