--- a/fansite.css
+++ b/fansite.css
@@ -14,3 +14,49 @@
 
 /*--------------------fin----------------------------------------*/
 
+/*--------------------header---------------------------------*/
+body{
+    margin: 0;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(9, 177, 243);
+  }
+  
+  li {
+    float: left;
+  }
+  li a  {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 
+  }
+  
+  li a:hover {
+    background-color: rgb(9, 110, 243);
+  }
+  h1{
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      color: blue;
+      font-variant: small-caps;
+      text-decoration: underline;
+      font-size: 50px;
+
+  }
+  .img1{
+      height: 10%;
+      width: 10%;
+    float: left;
+  }
+  .titre1{
+   float: right;
+  }
+  header{
+      
