--- a/fansite.css
+++ b/fansite.css
@@ -7,6 +7,28 @@
 /*----------------fin---------------------------------*/
 
 /*----------------tableau palmarès fansite3.html-------------------*/
+td{
+  
+  background-color: rgb(241, 242, 243);
+  opacity: 0.6;
+}
+
+th{
+  background-color: rgb(253, 244, 244);
+  opacity: 0.6;
+}
+table{
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+height: 100px;
+width: 500px;
+border-collapse: separate;
+margin:auto
+
+}
+#table{
+  justify-content: center;
+}
+
 
 /*--------------------fin-----------------------------------------*/
 
@@ -17,6 +39,7 @@
 /*--------------------header---------------------------------*/
 body{
     margin: 0;
+    background-image: url("https://img.lemde.fr/2020/02/19/313/0/5184/2592/1440/720/60/0/2b396d7_8hpgyPH4tpnvTNgXwjBsDWGV.jpg");
 }
 ul {
     list-style-type: none;
@@ -59,4 +82,6 @@ ul {
    float: right;
   }
   header{
+    background-color: snow;
+  }
       
