--- a/fansite.css
+++ b/fansite.css
@@ -39,51 +39,303 @@ margin:auto
 /*--------------------header---------------------------------*/
 body{
     margin: 0;
-    background-image: url("https://img.lemde.fr/2020/02/19/313/0/5184/2592/1440/720/60/0/2b396d7_8hpgyPH4tpnvTNgXwjBsDWGV.jpg");
+    
+    
 }
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
     background-color: rgb(9, 177, 243);
   }
   
-  li {
-    float: left;
-  }
-  li a  {
+  
+    
+  
+  .heade a{
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 
   }
+   
   
-  li a:hover {
+  
+  .header1 a :hover {
     background-color: rgb(9, 110, 243);
   }
-  h1{
+
+  .header3{
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       color: blue;
       font-variant: small-caps;
-      text-decoration: underline;
-      font-size: 50px;
+      font-size: 30px;
+      
 
   }
+  
   .img1{
-      height: 10%;
-      width: 10%;
+      height: 5%;
+      width: 5%;
     float: left;
+    padding-top: 20px;
   }
   .titre1{
    float: right;
   }
-  header{
-    background-color: #71d4fa;
-  }
+ 
+  
+ 
+  /* Style The Dropdown Button */
+.dropbtn1 {
+  background-color: #147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  border:3px solid white;
+
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown1 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content1 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content1 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content1 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown1:hover .dropdown-content1 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown1:hover .dropbtn {
+  background-color: #3e8e41;
+}
+/* ----------------------------------------------------------- */
+/* Style The Dropdown Button */
+.dropbtn2 {
+  background-color:#147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  cursor: pointer;
+  border:3px solid white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown2 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content2 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content2 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content2 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown2:hover .dropdown-content2 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown2:hover .dropbtn {
+  background-color: #3e8e41;
+}
+  /* ----------------------------------------------------------- */
+  /* Style The Dropdown Button */
+.dropbtn3 {
+  background-color: #147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  cursor: pointer;
+  border:3px solid white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown3 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content3 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content3 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content3 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown3:hover .dropdown-content3 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown3:hover .dropbtn3 {
+  background-color: #3e8e41;
+}
+/* --------------------------------------------------------- */
+ /* Style The Dropdown Button */
+ .dropbtn4 {
+  background-color: #147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  cursor: pointer;
+  border:3px solid white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown4 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content4 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content4 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content4 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown4:hover .dropdown-content4 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown4:hover .dropbtn4 {
+  background-color: #3e8e41;
+}
+
+#header2{
+  justify-content: center;
+  display: flex;
+}
+header{
+  background-color: #0cdbf7;
+}
+/* ------------------------------------------------------------ */
+/* Style The Dropdown Button */
+.dropbtn5 {
+  background-color: #147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  border:3px solid white;
+
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown5 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content5 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content5 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content5 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown5:hover .dropdown-content5 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown5:hover .dropbtn {
+  background-color: #3e8e41;
+}
       /*--------------------footer---------------------------------*/
       .footer {
         
@@ -110,4 +362,3 @@ ul {
         margin-left: 70%;
       }
       
-  
