--- a/fansite.css
+++ b/fansite.css
@@ -1,16 +1,735 @@
 /*------------Page d'acceuil fansite.html-------------*/
 
+#body-accueil{
+    background-image: url("https://img.lemde.fr/2020/02/19/313/0/5184/2592/1440/720/60/0/2b396d7_8hpgyPH4tpnvTNgXwjBsDWGV.jpg");
+    /*background-size: 100%;*/
+    background-position: fixed ;
+    top: 0;
+    /*position: absolute;*/
+}
+.container-acc-video {
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    justify-content: space-around;
+    margin: 2%;
+}
+
+.h1-acc-tem {
+    color: #0097d7;
+    background-color: #F5FFFA;
+    font-size: 30px;
+    font-family: 'Ephesis', cursive;
+    border-radius: 15px;
+    box-shadow: 12px 12px 2px 1p red;
+    text-decoration: none;
+    width: 250px;
+    align-content: center;
+    margin-top: 3%;
+    margin-left: 40%;
+    text-align: center;
+}
+
+.p-acc-tem {
+    color: #0097d7;
+    background-color: #F5FFFA;
+    font-size: 30px;
+    font-family: 'Ephesis', cursive;
+    border-radius: 15px;
+    box-shadow: 12px 12px 2px 1p red;
+    text-decoration: none;
+    width: 400px;
+    align-content: center;
+    margin-top: 3%;
+    margin-left: 35%;
+    text-align: center;
+}
+
+
+
 /*------------------Fin--------------------------------*/
 
+
 /*------------Historique Club fansite2.html-----------*/
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+#titre1 {
+    height: auto;
+    width: 500px;
+}
+
+#Club{
+    border: 1px solid blue;
+    width: 250px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em;
+    margin-bottom: 10px; 
+}
+
+h2{
+    margin-top: 10px;
+}
+
+.textH {
+    margin-left: 360px;
+    font-family: cursive;
+}
+
+.st{
+    color: #0097d7;
+    margin-left: 20%;
+}
+
+.container {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.ligne1{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.ligne2{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#imgequipe{
+    width: 800px;
+    height: 350px;
+}
+
+#clubH {
+  margin-bottom: 10px;
+}
+
+#équipe {
+    padding-bottom: 10px;
+}
+
+#jo{
+    width: 250px;
+    height: 200px;
+}
+
+#jul{
+    width: 250px;
+    height: 200px;
+}
+
+#ed{
+    width: 250px;
+    height: 200px;
+}
+
+#jean{
+    width: 250px;
+    height: 200px;
+}
+
+#rené{
+    width: 250px;
+    height: 200px;
+}
+
+#vélod{
+    width: 250px;
+    height: 200px;
+}
+
 
 /*----------------fin---------------------------------*/
 
+
 /*----------------tableau palmarès fansite3.html-------------------*/
+td{
+  
+    background-color: rgb(241, 242, 243);
+    opacity: 0.6;
+  }
+  
+  th{
+    background-color: rgb(253, 244, 244);
+    opacity: 0.6;
+  }
+  table{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  height: 100px;
+  width: 500px;
+  border-collapse: separate;
+  margin:auto
+  
+  }
+  #table{
+    justify-content: center;
+  }
 
 /*--------------------fin-----------------------------------------*/
 
+
 /*-----------------Calendrier fansite4.html-----------------------*/
+.day-match {
+   
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+.date {
+    font-family: 'Ephesis', cursive;
+    font-family: 'Petit Formal Script', cursive;
+    color:#6495ED;
+}
+
+.vs{
+    font-family: 'Ephesis', cursive;
+    font-family: 'Petit Formal Script', cursive;
+    font-size: 30px;
+    color: #FF4500;
+}
+
+.logo-adv {
+    height: 60px;
+    width: 60px;
+    margin-top: 20px;
+}
+
+.logo-om{
+    height: 60px;
+    width: 60px;
+    margin-top: 20px
+}
+
+.rencontre {
+    display: flex;
+    padding-top: 1.5%;
+   
+}
+
+.col{
+    border: 1px solid black;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    margin: 10px;
+    margin-left: 10%;
+    border-radius: 30px;
+    
+}
+
+.BP{
+    padding-top: 3.3%;
+    
+}
+
+#blocCal{
+    margin-bottom: 10px;
+    height: 40px;
+    background-color: #203c59;
+    
+}
+
+.teamMF {
+    list-style-type: none;
+    margin: 10px;
+    padding: 0;
+    overflow: hidden;
+    text-decoration: none;
+    text-align: center;
+    
+}
+
+.MF {
+   
+    text-decoration: none;
+    display: inline;
+    
+  /*  list-style-type: none;*/
+}
+
+#cal {
+    text-align: center;
+    color: 	#87CEFA;
+    font-family: 'Ephesis', cursive;
+    font-family: 'Petit Formal Script', cursive;
+}
+
+#Octobre {
+    margin-left: 10%;
+    color: 	#87CEFA;
+}
+
+#butt{
+    min-width: 180px;
+    box-sizing: border-box;
+    border: 2px solid #0097d7;
+    padding: 12px 20px;
+    text-decoration: none;
+    text-align: center;
+    font-style: italic;
+    z-index:1;
+}
+/*#vs{
+    margin-right: 900px;
+}*/
+
+
 
 /*--------------------fin----------------------------------------*/
 
+/*--------------------Contact------------------------------------*/
+.formulaire{
+    background-color: rgb(255, 255, 255);
+    height: 130%;
+    width: 58%;
+    margin-left: 25%;
+    margin: 2%;
+    display: block;
+
+}
+
+#infocontact{
+    border-width: 1px;
+    border:outset rgba(128, 128, 128, 0.288) 1px ;
+    border-style: solid;
+    font-size: 25px;
+    color: #0c71c3;
+    background-color: rgb(255, 255, 255);
+    margin-left: 3%;
+    width: 45%;
+    height: 4%;
+    margin-top: 4%;
+}
+
+#infocontact1{
+    border-width: 1px;
+    border:outset rgba(128, 128, 128, 0.288) 1px ;
+    border-style: solid;
+    font-size: 25px;
+    color: #0c71c3;
+    background-color: rgb(255, 255, 255);
+    margin-left: 3%;
+    width: 94%;
+    height: 4%;
+    margin-top: 4%;
+}
+
+#infocontact2{
+    border-width: 1px;
+    border:outset rgba(128, 128, 128, 0.288) 1px ;
+    border-style: solid;
+    font-size: 25px;
+    color: #0c71c3;
+    background-color: rgb(255, 255, 255);
+    margin-left: 3%;
+    width: 94%;
+    height: 30%;
+    margin-top: 4%;
+}
+
+#sendcontact{
+    color:white;
+    padding: 2%;
+    background-color: #275fa0;
+    cursor:pointer;
+    border-radius: 100px;
+    width: 15%;
+    margin-top: 3%;
+    letter-spacing: 1px;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-left: 45%;
+}
+
+
+/*--------------------FIN----------------------------------------*/
+
+/*--------------------header---------------------------------*/
+body{
+    margin: 0;
+    
+    
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+    background-color: rgb(9, 177, 243);
+  }
+  
+  
+    
+  
+  .heade a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+   
+  
+  
+  .header1 a :hover {
+    background-color: #0097d7;
+  }
+
+  .header3{
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      color: white;
+      font-variant: small-caps;
+      font-size: 30px;
+      
+
+  }
+  
+  .img1{
+      height: 5%;
+      width: 5%;
+    float: left;
+    padding-top: 20px;
+  }
+  .titre1{
+   float: right;
+  }
+ 
+  
+ 
+  /* Style The Dropdown Button */
+.dropbtn1 {
+  background-color: #147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  border:3px solid white;
+
+}
+
+.dropdown6{
+    position: relative;
+    display: inline-block;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown1 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content1 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content1 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content1 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown1:hover .dropdown-content1 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown1:hover .dropbtn {
+  background-color: #3e8e41;
+}
+/* ----------------------------------------------------------- */
+/* Style The Dropdown Button */
+.dropbtn6{
+    background-color:#147cdd;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    cursor: pointer;
+    cursor: pointer;
+    border:3px solid white;
+    text-decoration: none;
+}
+
+.dropbtn2 {
+  background-color:#147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  cursor: pointer;
+  border:3px solid white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown2 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content2 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content2 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content2 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown2:hover .dropdown-content2 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown2:hover .dropbtn {
+  background-color: #3e8e41;
+}
+  /* ----------------------------------------------------------- */
+  /* Style The Dropdown Button */
+.dropbtn3 {
+  background-color: #147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  cursor: pointer;
+  border:3px solid white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown3 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content3 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content3 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content3 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown3:hover .dropdown-content3 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown3:hover .dropbtn3 {
+  background-color: #3e8e41;
+}
+/* --------------------------------------------------------- */
+ /* Style The Dropdown Button */
+ .dropbtn4 {
+  background-color: #147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  cursor: pointer;
+  border:3px solid white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown4 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content4 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content4 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content4 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown4:hover .dropdown-content4 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown4:hover .dropbtn4 {
+  background-color: #3e8e41;
+}
+
+#header2{
+  justify-content: center;
+  display: flex;
+}
+header{
+  background-color: #0cdbf7;
+}
+/* ------------------------------------------------------------ */
+/* Style The Dropdown Button */
+.dropbtn5 {
+  background-color: #147cdd;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  border:3px solid white;
+
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown5 {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content5 {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content5 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content5 a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown5:hover .dropdown-content5 {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown5:hover .dropbtn {
+  background-color: #3e8e41;
+}
+  /*--------------------footer---------------------------------*/
+  .footer {        
+        
+    background-color: white;
+    font-family: 'Times New Roman', Times, serif;
+    display: flex;
+    flex-direction: row;
+
+  }
+  .footer1 a{
+    color: rgb(0, 255, 255);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: block;
+    color: rgb(29, 7, 7);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;        
+  }
+  footer a:hover{
+    background-color:rgb(57, 152, 230);
+  }
+  .footer2 img{        
+    height: 50px;
+    width: 50px; 
+    
+          
+  }
+  #footer{
+    margin-left: 70%;
+    position: relative;
+    display: flex;
+    width: 70%;
+    z-index: 1;
+  }
+  #box{
+    display: flex;
+    flex-direction: row;
+  }
+#foot{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+#all_footer{
+display: flex;
+}
+#logofooter{
+display: flex;
+
+}
+#navfooter{
+display: flex;
+}
