--- a/fansite.css
+++ b/fansite.css
@@ -693,6 +693,7 @@ header{
 
 .lien{
     text-decoration: none;
+    color: white;
 }
   /*--------------------footer---------------------------------*/
   .footer {        
